app/assets/stylesheets/application.css
:root {
  --main-border: 1px solid var(--bulma-border);
}

html:has(.outer-flex),
body:has(.outer-flex),
#debts-index-app,
.outer-flex {
  height: 100%;
  overflow: hidden;
}

.outer-flex {
  display: flex;
  flex-direction: column;
}

.outer-flex .action-bar {
  flex: 0 0 auto;
}

.outer-flex .inner-flex {
  flex: 1 1 auto;
  margin-bottom: 0;
  min-height: 0;
}

#navigation-bar {
  border-bottom: var(--main-border);
}

.navbar-menu.is-active {
  border-top: var(--main-border);
}

.navbar-item.title {
  font-size: inherit;
  line-height: inherit;
  margin: 0;
}

.action-bar {
  border-top: var(--main-border);
}

.action-bar .buttons {
  justify-content: center;
}

.action-bar .buttons .button {
  border: none;
  flex-direction: column;
}

.action-bar .buttons .button .icon {
  margin: 0;
}

.action-bar .buttons .button .text {
  font-size: 0.75rem;
}

.side-panel .card .card-header {
  border-start-end-radius: unset;
  border-start-start-radius: unset;
  border-top: var(--main-border);
  border-bottom: var(--main-border);
}

.card-header-title {
  color: var(--bulma-body-color);
  font-weight: var(--bulma-weight-extrabold);
  padding: 10px 12px;
}

.card-footer.buttons .button {
  border-top-left-radius: 0;
}

.notification {
  margin: 1rem 0 0;
}

.notification .delete {
  right: 0.25rem;
  top: 0.25rem;
}

.side-panel .notification {
  margin: 0.5rem;
}

.container>.title {
  margin-top: 1rem;
}

.debts {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.scroller {
  height: 100%;
  margin: 0;
  overflow-x: hidden;
  overflow-y: scroll;
  padding: 0;
}

.connection-buttons {
  margin: 0.5rem;
}

.connection {
  align-items: center;
  display: flex;
  flex-flow: row;
  padding-bottom: 0.5rem;
}

.connection .description {
  flex-grow: 1;
}

.connection .description .name {
  color: var(--bulma-text-bold);
}

.connection .date {
  white-space: nowrap;
}

.narrow-checkbox-column {
  width: 40px !important;
}

@media screen and (max-width: 1023px) {
  body>.container {
    padding: 0 1rem;
  }

  .side-panel {
    position: absolute;
  }

  .side-panel .notification {
    top: 0.5rem;
    left: 0.5rem;
    margin: 0;
    position: fixed;
    right: 0.5rem;
    z-index: 100;
  }

  .side-panel .card {
    display: flex;
    flex-direction: column;
    height: 100%;
    left: 0;
    padding: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 100;
  }

  .modal {
    z-index: 101;
  }

  .side-panel .card .card-header {
    height: 52px;
  }

  .side-panel .card .card-content {
    flex-grow: 1;
  }

  .side-panel .card .card-footer {
    bottom: 0;
    width: 100%;
  }
}

@media screen and (max-width: 768px) {
  .columns {
    margin-top: 0;
  }

  .column {
    padding-bottom: 0;
    padding-top: 0;
  }

  .inner-flex {
    display: flex;
    flex-direction: column-reverse;
  }

  .inner-flex .main-panel {
    flex: 0 1 auto;
    min-height: 0;
  }

  .debts .debts-headings {
    flex: 0 0 auto;
    margin-bottom: 0;
  }

  .debts .debts-content {
    flex: 1 1 auto;
  }

  .debts .date,
  .connection-title {
    background-color: var(--bulma-body-background-color);
    border-top: var(--main-border);
    color: var(--bulma-text-bold);
    font-size: 0.9rem;
    padding: 0.25rem 1rem;
  }

  .debts .debt,
  .connection {
    background-color: var(--bulma-background);
    border-top: var(--main-border);
    color: inherit;
    margin-bottom: 0;
    padding: 0.25rem 0.5rem;
  }

  .debts .debt.repayment {
    background-color: var(--bulma-border);
  }

  .debt .debt-payee,
  .debt .debt-amount-paid {
    color: var(--bulma-text-bold);
  }

  .debt .debt-memo,
  .debt .debt-amount,
  .connection .email {
    font-size: 0.9rem;
  }

  .debt .debt-amount input[type="checkbox"] {
    margin-left: 0.5rem;
  }

  .container:has(.connection) {
    padding: 0;
  }

  .card-footer.buttons .button {
    border-top-left-radius: 0;
  }
}

@media screen and (min-width: 769px) {
  .action-bar {
    border-bottom: var(--main-border);
    border-top: none;
    order: 1;
  }

  .action-bar .buttons {
    justify-content: start;
  }

  .action-bar .buttons .button {
    flex-direction: row;
  }

  .action-bar .buttons .button .icon {
    margin: 0 0.25rem 0 -0.5rem;
  }

  .action-bar .buttons .button .text {
    font-size: 1rem;
  }

  .inner-flex {
    order: 2;
  }

  .debts table {
    height: 100%;
    display: flex;
    flex-direction: column;
  }

  .debts table thead {
    display: table;
    flex: 0 0 auto;
    table-layout: fixed;
    width: 100%;
  }

  .debts table thead tr th {
    border: var(--main-border);
    border-top: none;
    color: var(--bulma-body-color);
    font-size: 0.8rem;
    font-weight: var(--bulma-body-weight);
    padding: 0.25rem 0.5rem;
    text-transform: uppercase;
  }

  .debts table tbody.scroller {
    border: var(--main-border);
    border-top: none;
    flex: 1 1 auto;
    display: block;
    overflow-y: auto;
  }

  .debts table tbody tr {
    display: table;
    width: 100%;
    table-layout: fixed;
  }

  .debts table tbody tr td {
    cursor: pointer;
    padding: 0.25rem 0.5rem;
  }

  .debts table tbody tr.repayment {
    background-color: var(--bulma-border);
  }

  .connection-buttons {
    margin: 1rem 0 0 0;
  }

  .connection-title {
    color: var(--bulma-text-strong);
    font-size: 1.25rem;
    font-weight: var(--bulma-weight-extrabold);
    margin-top: var(--bulma-block-spacing);
  }

  .connection {
    border-bottom: var(--main-border);
    max-width: 384px;
    padding: 0.5rem 0;
  }

  .connection:last-child {
    border-bottom: none;
  }

  .connection .description .name {
    margin-right: 0.5rem;
  }
}

